# paketdispov2

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  LT_Digitale_Belegverteilung_MitarbeiterApp_Konzept_v1_5_Verifikation_Offene_Punkte.docx  README.md  docker-compose.yml  eslint.config.mjs  openapi.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/logs/: session-20260616-fe18e325.md
.github/workflows/: ci.yml
apps/backend-api/: .env.example  .swcrc  openapi.json  package.json  prisma.config.ts  railway.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
apps/employee-pwa/: .env.example  index.html  package.json  playwright.config.ts  railway.json  vite.config.ts  vitest.config.ts
apps/parser-worker/: README.md  pyproject.toml
apps/parser-worker/src/parser_worker/: __init__.py  __main__.py  confidence.py  guardrails.py  models.py  pipeline.py  queue.py
apps/parser-worker/src/parser_worker/extraction/: __init__.py  pdf_text.py
apps/parser-worker/src/parser_worker/mapping/: __init__.py  normalize.py  we_beleg.py  work_instruction.py
apps/parser-worker/tests/: test_confidence.py  test_golden_gate.py  test_golden_master.py  test_guardrails.py  test_load_batch.py  test_models.py  test_normalize.py  test_queue.py
apps/parser-worker/tests/fixtures/: generate_pdfs.py  golden_variants.py
apps/teamlead-web/: .env.example  index.html  package.json  playwright.config.ts  railway.json  vite.config.ts  vitest.config.ts
docs/: acceptance.md  operations.md
docs/analysis/: beleg-actions-critical-review.md  parser-analysis.md  status-flow-paths-map.md  ux-gap-analysis.md
plan/: 2026-06-15-automatik-frontend-backend-wiring.md  2026-06-16-employee-settings-implementation.md  handbook_task_plan.md  notes.md  problem-workflow-rework.md  task_plan.md
scripts/: backup.sh  restore.sh
(+506 files in other folders)
