[project]
name = "parser-worker"
version = "0.1.0"
description = "Python PDF parser worker (PyMuPDF/pdfplumber). Outputs needs_review on low confidence."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "redis>=5.0",
    "structlog>=24.4",
    "bullmq>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parser_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true

# PyMuPDF (fitz), pdfplumber and the BullMQ client ship without type stubs.
[[tool.mypy.overrides]]
module = ["fitz", "pdfplumber", "bullmq", "bullmq.*"]
ignore_missing_imports = true
